update lambda code and schema for bedrock open api
